--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 ktor:
     application:
         modules:
-            - ponder.narathon.server.ApplicationKt.module
+            - ponder.narrathon.server.ApplicationKt.module
     deployment:
         port: 8080
 jwt:
